tests/snapshots/deserializer__dense_array_one_element.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n[1]"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [
        I32(
            1,
        ),
    ] {},
}

