tests/snapshots/deserializer__dense_array_two_elements.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n[1, 2]"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [
        I32(
            1,
        ),
        I32(
            2,
        ),
    ] {},
}

