tests/snapshots/deserializer__dense_array_two_elements_multi_type.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n[1, \"asd\"]"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [
        I32(
            1,
        ),
        String(
            OneByte("asd"),
        ),
    ] {},
}

