tests/snapshots/deserializer__dense_array_with_object.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n[1, { a: true }]"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [
        I32(
            1,
        ),
        HeapReference(
            *1,
        ),
    ] {},
    1: Object {
        OneByte("a"): Bool(
            true,
        ),
    },
}

