tests/snapshots/deserializer__double.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n1.1"
---
=== VALUE ===
Double(1.1)

=== HEAP ===
Heap {}

