tests/snapshots/deserializer__double_infinity.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nInfinity"
---
=== VALUE ===
Double(inf)

=== HEAP ===
Heap {}

