tests/snapshots/deserializer__double_min.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n5e-324"
---
=== VALUE ===
Double(5e-324)

=== HEAP ===
Heap {}

